<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_duration" >

    <item
        android:id="@+id/menu_effect_vibrato"
        android:title="@string/menu_effect_vibrato"/>
    <item
        android:id="@+id/menu_effect_bend"
        android:title="@string/menu_effect_bend"/>
    <item
        android:id="@+id/menu_effect_dead_note"
        android:title="@string/menu_effect_dead_note"/>
    <item
        android:id="@+id/menu_effect_slide"
        android:title="@string/menu_effect_slide"/>
    <item
        android:id="@+id/menu_effect_hammer"
        android:title="@string/menu_effect_hammer"/>
    <item
        android:id="@+id/menu_effect_tremolo_bar"
        android:title="@string/menu_effect_tremolo_bar"/>
    <item
        android:id="@+id/menu_effect_ghost_note"
        android:title="@string/menu_effect_ghost_note"/>
    <item
        android:id="@+id/menu_effect_accentuated_note"
        android:title="@string/menu_effect_accentuated_note"/>
    <item
        android:id="@+id/menu_effect_heavy_accentuated_note"
        android:title="@string/menu_effect_heavy_accentuated_note"/>
    <item
        android:id="@+id/menu_effect_harmonic"
        android:title="@string/menu_effect_harmonic"/>
    <item
        android:id="@+id/menu_effect_grace"
        android:title="@string/menu_effect_grace"/>
    <item
        android:id="@+id/menu_effect_trill"
        android:title="@string/menu_effect_trill"/>
    <item
        android:id="@+id/menu_effect_tremolo_picking"
        android:title="@string/menu_effect_tremolo_picking"/>
    <item
        android:id="@+id/menu_effect_palm_mute"
        android:title="@string/menu_effect_palm_mute"/>
    <item
        android:id="@+id/menu_effect_let_ring"
        android:title="@string/menu_effect_let_ring"/>
    <item
        android:id="@+id/menu_effect_staccato"
        android:title="@string/menu_effect_staccato"/>
    <item
        android:id="@+id/menu_effect_tapping"
        android:title="@string/menu_effect_tapping"/>
    <item
        android:id="@+id/menu_effect_slapping"
        android:title="@string/menu_effect_slapping"/>
    <item
        android:id="@+id/menu_effect_popping"
        android:title="@string/menu_effect_popping"/>
    <item
        android:id="@+id/menu_effect_fade_in"
        android:title="@string/menu_effect_fade_in"/>
</menu>