<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_beat" >

    <item
        android:id="@+id/menu_beat_edit_text"
        android:title="@string/menu_beat_edit_text"/>
    <item
        android:id="@+id/menu_beat_change_tied_note"
        android:checkable="true"
        android:title="@string/menu_beat_change_tied_note"/>
    <item
        android:id="@+id/menu_beat_clean_beat"
        android:title="@string/menu_beat_clean_beat"/>
    <item
        android:id="@+id/menu_beat_decrement_note_semitone"
        android:title="@string/menu_beat_decrement_note_semitone"/>
    <item
        android:id="@+id/menu_beat_increment_note_semitone"
        android:title="@string/menu_beat_increment_note_semitone"/>
    <item
        android:id="@+id/menu_beat_delete_note_or_rest"
        android:title="@string/menu_beat_delete_note_or_rest"/>
    <item
        android:id="@+id/menu_beat_insert_rest_beat"
        android:title="@string/menu_beat_insert_rest_beat"/>
    <item
        android:id="@+id/menu_beat_move_beats_left"
        android:title="@string/menu_beat_move_beats_left"/>
    <item
        android:id="@+id/menu_beat_move_beats_right"
        android:title="@string/menu_beat_move_beats_right"/>
    <item
        android:id="@+id/menu_beat_remove_unused_voice"
        android:title="@string/menu_beat_remove_unused_voice"/>
    <item
        android:id="@+id/menu_beat_set_voice_auto"
        android:title="@string/menu_beat_set_voice_auto"/>
    <item
        android:id="@+id/menu_beat_set_voice_down"
        android:title="@string/menu_beat_set_voice_down"/>
    <item
        android:id="@+id/menu_beat_set_voice_up"
        android:title="@string/menu_beat_set_voice_up"/>
    <item
        android:id="@+id/menu_beat_shift_note_down"
        android:title="@string/menu_beat_shift_note_down"/>
    <item
        android:id="@+id/menu_beat_shift_note_up"
        android:title="@string/menu_beat_shift_note_up"/>
    <item
        android:id="@+id/menu_beat_stroke"
        android:title="@string/menu_beat_stroke"/>
    
</menu>