<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.herac.tuxguitar.android.TGActivity" >

    <item
        android:id="@+id/menu_file"
        android:title="@string/menu_file"/>
    <item
        android:id="@+id/menu_edit"
        android:title="@string/menu_edit"/>
    <item
        android:id="@+id/menu_view"
        android:title="@string/menu_view"/>
    <item
        android:id="@+id/menu_transport"
        android:title="@string/menu_transport"/>
    <item
        android:id="@+id/menu_composition"
        android:title="@string/menu_composition"/>
    <item
        android:id="@+id/menu_track"
        android:title="@string/menu_track"/>
    <item
        android:id="@+id/menu_measure"
        android:title="@string/menu_measure"/>
    <item
        android:id="@+id/menu_beat"
        android:title="@string/menu_beat"/>

</menu>