<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_duration" >

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/menu_duration_whole"
            android:checkable="true"
            android:title="@string/menu_duration_whole"/>
        <item
            android:id="@+id/menu_duration_half"
            android:checkable="true"
            android:title="@string/menu_duration_half"/>
        <item
            android:id="@+id/menu_duration_quarter"
            android:checkable="true"
            android:title="@string/menu_duration_quarter"/>
        <item
            android:id="@+id/menu_duration_eighth"
            android:checkable="true"
            android:title="@string/menu_duration_eighth"/>
        <item
            android:id="@+id/menu_duration_sixteenth"
            android:checkable="true"
            android:title="@string/menu_duration_sixteenth"/>
        <item
            android:id="@+id/menu_duration_thirtysecond"
            android:checkable="true"
            android:title="@string/menu_duration_thirtysecond"/>
        <item
            android:id="@+id/menu_duration_sixtyfourth"
            android:checkable="true"
            android:title="@string/menu_duration_sixtyfourth"/>
    </group>

    <item
        android:id="@+id/menu_duration_dotted"
        android:checkable="true"
        android:title="@string/menu_duration_dotted"/>
    <item
        android:id="@+id/menu_duration_doubledotted"
        android:checkable="true"
        android:title="@string/menu_duration_doubledotted"/>
    <item
        android:id="@+id/menu_duration_division_type"
        android:title="@string/menu_duration_division_type">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/menu_duration_division_type_1"
                    android:checkable="true"
                    android:title="@string/menu_duration_division_type_1"/>
                <item
                    android:id="@+id/menu_duration_division_type_3"
                    android:checkable="true"
                    android:title="@string/menu_duration_division_type_3"/>
                <item
                    android:id="@+id/menu_duration_division_type_5"
                    android:checkable="true"
                    android:title="@string/menu_duration_division_type_5"/>
                <item
                    android:id="@+id/menu_duration_division_type_6"
                    android:checkable="true"
                    android:title="@string/menu_duration_division_type_6"/>
                <item
                    android:id="@+id/menu_duration_division_type_7"
                    android:checkable="true"
                    android:title="@string/menu_duration_division_type_7"/>
                <item
                    android:id="@+id/menu_duration_division_type_9"
                    android:checkable="true"
                    android:title="@string/menu_duration_division_type_9"/>
                <item
                    android:id="@+id/menu_duration_division_type_10"
                    android:checkable="true"
                    android:title="@string/menu_duration_division_type_10"/>
                <item
                    android:id="@+id/menu_duration_division_type_11"
                    android:checkable="true"
                    android:title="@string/menu_duration_division_type_11"/>
                <item
                    android:id="@+id/menu_duration_division_type_12"
                    android:checkable="true"
                    android:title="@string/menu_duration_division_type_12"/>
                <item
                    android:id="@+id/menu_duration_division_type_13"
                    android:checkable="true"
                    android:title="@string/menu_duration_division_type_13"/>
            </group>
        </menu>
    </item>

</menu>