<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_velocity" >

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/menu_velocity_ppp"
            android:checkable="true"
            android:title="@string/menu_velocity_ppp"/>
        <item
            android:id="@+id/menu_velocity_pp"
            android:checkable="true"
            android:title="@string/menu_velocity_pp"/>
        <item
            android:id="@+id/menu_velocity_p"
            android:checkable="true"
            android:title="@string/menu_velocity_p"/>
        <item
            android:id="@+id/menu_velocity_mp"
            android:checkable="true"
            android:title="@string/menu_velocity_mp"/>
        <item
            android:id="@+id/menu_velocity_mf"
            android:checkable="true"
            android:title="@string/menu_velocity_mf"/>
        <item
            android:id="@+id/menu_velocity_f"
            android:checkable="true"
            android:title="@string/menu_velocity_f"/>
        <item
            android:id="@+id/menu_velocity_ff"
            android:checkable="true"
            android:title="@string/menu_velocity_ff"/>
        <item
            android:id="@+id/menu_velocity_fff"
            android:checkable="true"
            android:title="@string/menu_velocity_fff"/>
    </group>

</menu>