<org.herac.tuxguitar.android.view.tool.TGCompositionToolView
	xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	style="@style/ToolView">

	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent" 
		android:orientation="vertical">

		<TextView 
			android:id="@+id/menu_composition_change_tempo"
			android:text="@string/menu_composition_change_tempo" 
			style="@style/ToolViewText"/>
			
		<TextView 
			android:id="@+id/menu_composition_change_clef"
			android:text="@string/menu_composition_change_clef" 
			style="@style/ToolViewText"/>
			
		<TextView 
			android:id="@+id/menu_composition_change_key_signature"
			android:text="@string/menu_composition_change_key_signature" 
			style="@style/ToolViewText"/>
			
		<TextView 
			android:id="@+id/menu_composition_change_time_signature"
			android:text="@string/menu_composition_change_time_signature" 
			style="@style/ToolViewText"/>
			
		<TextView 
			android:id="@+id/menu_composition_change_triplet_feel"
			android:text="@string/menu_composition_change_triplet_feel" 
			style="@style/ToolViewText"/>
		
		<View style="@style/ToolViewDivider" />
			
		<TextView 
			android:id="@+id/menu_composition_repeat_open"
			android:text="@string/menu_composition_repeat_open" 
			style="@style/ToolViewText"/>
			
		<TextView 
			android:id="@+id/menu_composition_repeat_close"
			android:text="@string/menu_composition_repeat_close" 
			style="@style/ToolViewText"/>
			
		<TextView 
			android:id="@+id/menu_composition_repeat_alternative"
			android:text="@string/menu_composition_repeat_alternative" 
			style="@style/ToolViewText"/>
		
		<View style="@style/ToolViewDivider" />
		
		<TextView 
			android:id="@+id/menu_composition_change_info"
			android:text="@string/menu_composition_change_info" 
			style="@style/ToolViewText"/>
			
	</LinearLayout>

</org.herac.tuxguitar.android.view.tool.TGCompositionToolView>